--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ font-weight: 500;
       height: 100%;
       flex-direction: column;
   }
-  
+
   .box{
       margin-bottom: 20px;
       width: 100%;
@@ -74,8 +74,6 @@ font-weight: 500;
   
       width: 295px;
   }
-  
-  
 }
 
 /* FORM START */
@@ -96,9 +94,22 @@ main{
       justify-content: space-between;
       align-items: start;
       padding: 20px;
-      
-  
+    
   }
+  
+  #editbtn{
+    width: 190px;
+    padding: 14px 20px 14px 20px ;
+    background-color: #12f63c;
+    border: none;
+    border-radius: 7px;
+    color: white;
+    font-size: 18px;
+    font-weight: 600;
+    cursor: pointer;
+    margin-top: 6px;
+    }
+  
 }
 
 .boxadd{
@@ -412,6 +423,8 @@ margin-bottom: 10px;
 #editbtn{
   display: none;
 }
+
+
 }
 
 #daonload:hover{
@@ -433,6 +446,24 @@ margin-top: 6px;
 #editbtn:hover{
 background-color: #1234f6;
 }
+.con-btn{
+  display: flex;
+  justify-content: space-between;
+  width: 40%;
+  }
+@media screen and (max-width:850px) {
+  #editbtn{
+    width: 150px;
+    }
+    #daonload{
+      width: 180px;
+    }
+    .con-btn{
+      display: flex;
+      justify-content: space-between;
+      width: 95%;
+      }
+} 
 #skillT{
 display: flex;
 flex-wrap: wrap;
@@ -455,11 +486,7 @@ margin-bottom: 10px;
 
 }
 
-.con-btn{
-display: flex;
-justify-content: space-between;
-width: 40%;
-}
+
 .container1{
 
 margin-left: auto;
@@ -470,7 +497,6 @@ margin-left: auto;
 margin-right: auto;
 }
 .genrat{
-
 margin-left: auto;
 margin-right: auto;
 display: flex;
